gitops-manifests/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: NodePort  # متعدلة هنا كمان لـ NodePort
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend-api
          image: us-central1-docker.pkg.dev/gcp-devops-ecommerce/my-registry/backend-api:latest
          ports:
            - containerPort: 5000
